crates/mockql-core/src/graphql/snapshots/response_merger/preserves_response_fields/mockql_core__graphql__response_merger__tests__response_merger_produces_expected_output@preserves_response_fields__both_have_extensions.json.snap
---
source: crates/mockql-core/src/graphql/response_merger.rs
input_file: crates/mockql-core/src/graphql/snapshots/response_merger/preserves_response_fields/both_have_extensions.json
---
{
  "data": {
    "me": {
      "id": "1",
      "username": "ada42"
    }
  },
  "extensions": {
    "tracing": {
      "version": 1
    },
    "cacheControl": {
      "maxAge": 300
    },
    "costEstimate": {
      "total": 5
    }
  }
}
